--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,6 +47,9 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="/">Back to Display</a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/options">Options</a>
+		      </li>
 		  </div>
 		</nav>
 	<%};%>
